# Google-Agent-Development-Kit--ADK----MasterClass

./: README.md
adk/: pyproject.toml
adk/agent-callback/: agent.py
adk/model-callback/: agent.py
adk/multi-agents/: agent.py
adk/parallel-agent/: agent.py
adk/persistent_agent/: agent.py
adk/session-state-runner/: agent.py  session_object.py  simple_study_buddy.db  tester.py
mfa/: README.md  pyproject.toml
mfa/agent-callback/: ANALYSIS.md  agent.py  serve.py
mfa/model-callback/: ANALYSIS.md  agent.py
mfa/multi-agents/: ANALYSIS.md  agent.py
mfa/parallel-agent/: ANALYSIS.md  agent.py
mfa/persistent_agent/: ANALYSIS.md  agent.py  recipe_data.db
mfa/session-state-runner/: ANALYSIS.md  agent.py  session_object.py  tester.py
